feat: 채팅방 및 메시지 테스트 유틸 추가 및 ChatRoomPreviewResponse 필드 개선
- FixtureUtil에 채팅방 및 메시지 관련 테스트 유틸 메서드 추가
- ChatRoomPreviewResponse 필드명 및 데이터 매핑 로직 개선
  - `status`를 `reservationStatus`로, `createdAt`을 `lastChatCreatedAt`으로 변경
- ChatRoomIntegrationTest에서 FixtureUtil 메서드 활용으로 코드 가독성 및 재사용성 향상